# Coursework-Libraries

./: pyproject.toml
src/: config.py  custom_report.txt  main.py  reports.py  services.py  utils.py  views.py
tests/: test_get_card_with_spend_utils.py  test_get_currency_utils.py  test_get_path_and_period_utils.py  test_get_stock_utils.py  test_get_top_transactions_utils.py  test_reports.py  test_services.py  test_utils.py  test_views.py
