[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Alexander Abramov <richesantiques9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
